--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 /*Large Background Image*/
 html {
-    background: url(../img/bkgd2.jpg) no-repeat center center fixed;
+    background: url(../img/full-bkgd.png) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
    /* set height to 100% - these are important for allowing content to vertically align */
@@ -120,23 +120,29 @@ body {
 
 #content {
     /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
-    background: #222;
-    background:rgba(0,0,0,0.7);
-    color: #fff;
+    background: rgba(255,215,0,0.7);
+    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
+    font-weight: 500;
     font-size: 1.25em;
     line-height: 1.5em;
     border-radius: 10px;
-    padding: 0px 30px;
-    width: 300px;
-    height: 300px;
+    padding: 0px 10px;
+    margin: 0 30px 200px 0;
+    width: 400px;
+    height: 200px;
 }
 
-#content p span {
+#content h3 {
+    text-align: center;
+}
+
+#content p {
+    text-align: center;
     font-family: 'Lora', sans-serif;
 }
 
